# trading-telemetry_mvp

./: .env.sample  .envrc  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.infra.yml  trading-metrics-readme.md
docs/: infra.md  synopsis.md  synopsis.simple.md  todo-list.md
docs/api/: openapi.fastapi.md
docs/implementing/: todo-list.md
docs/other/: question-prep.md
docs/product/: MVP.PRD.md  latency.md  mvp-issue.md
docs/structure/: architecture.md  broker-design-pattern.md  ideal-project-architecture.md  practical.implementing-project-architecture.md  (+1 more)
docs/tech/: zeromq.md  (+2 more)
metrics-sidecar/: README.md  pyproject.toml
metrics-sidecar/src/: environment.py
metrics-sidecar/src/metrics_sidecar/: __init__.py  app.py  entrypoint.py  environment.py
metrics-sidecar/src/metrics_sidecar/lib/: data_analysis_metrics.py  metrics.py  models.py  zmq_sub.py
metrics-sidecar/src/metrics_sidecar/utils/: exit_handler.py  logging.py
trading-app/: README.md  pyproject.toml
trading-app/src/: environment.py
trading-app/src/trading_app/: __init__.py  app.py  entrypoint.py  environment.py
trading-app/src/trading_app/benchmark/: README.md  __init__.py  analyzer.py  benchmark.py  example.py  monitor.py  runners.py  self_monitor.py  test_metrics.py
trading-app/src/trading_app/benchmark/report/: 10-08-25.report.md
trading-app/src/trading_app/features/: __init__.py  client.py  models.py  streamlit_main.py  ui.py  ui_components.py
trading-app/src/trading_app/lib/: ui.py  zmq_pub.py
trading-app/src/trading_app/utils/: __init__.py  logging.py  task_manager.py
(+5 files in other folders)
